--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,5 @@
 {
-    "chromedriver_path": "C:\\Program Files (x86)\\chromedriver.exe",
+    "chromedriver_path": ""C:\Users\erick\Downloads\chromedriver_win32.zip"",
 
     "antifarm_sleep": 0,
 
